--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-        <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+        <script type='text/javascript' src='aframe-ar.js'></script>
 
         <script type="module" src="firebase.js"></script>
         <script src="script.js"></script>
@@ -21,20 +21,29 @@
 
             <a-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' far=30  gps-projected-camera='gpsMinDistance: 1; positionMinAccuracy: 5; alert: true'></a-camera>
 
+            <button id="listButton">Lista</button>
+
             <div class="message" id="message" style="display: none"></div>
 
             <div id="info-box" style="display: none">
                 <div class="image-info">
                     <img id="img"></img>
-                </div>
-                    
+                </div>    
                 <div class="description-info">
                     <h1 id="title-info"></h1>
                     <p id="description-info"></p>
                 </div>
             </div>
 
+            <div id="lista_raccolta" style="display: none">
+                <button id="closeList">Chiudi</button>
+                <h1>LA TUA RACCOLTA</h1>
+                <ul></ul>
+            </div>
+
         </a-scene>
+
+        
 
     </body>
 </html>
