--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
         <script type='text/javascript' src='aframe-ar.js'></script>
 
-        <script type="module" src="firebase.js"></script>
-        <script src="script.js"></script>
+        <script type="module" src="app.js"></script>
     </head>
     <body>
         
@@ -35,7 +34,19 @@
                 </div>
             </div>
 
-            <div id="lista_raccolta" style="display: none">
+            <li id="li_structure" style="display: none">
+                <div class="li_list">
+                    <img class="image-info" style="width: 20%"></img>
+                    <p class="nome"></p>
+                </div>
+                <div class="hidden_info" style="display: none">
+                    <p class="zona"></p>
+                    <p class="materiale"></p>
+                    <p class="descrizione"></p>
+                </div>
+            </li>
+
+            <div id="list" style="display: none">
                 <button id="closeList">Chiudi</button>
                 <h1>LA TUA RACCOLTA</h1>
                 <ul></ul>
